add stubs methods to solve #2

--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,31 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      /*********************************************************/
+      /*               Callbacks for the greeter               */
+      /*********************************************************/
+
+      /**
+       * show_prompt callback.
+       */
+      window.show_prompt = function(text, type) {
+        /* Stub.  Does nothing. */
+      };
+
+      /**
+       * show_message callback.
+       */
+      window.show_message = function(text, type) {
+        /* Stub.  Does nothing. */
+      };
+
+      /**
+       * authentication_complete callback.
+       */
+      window.authentication_complete = function() {
+        /* Stub.  Does nothing. */
+      };
+    </script>
   </body>
 </html>
